--- a/Eventures/Views/Event/All.cshtml
+++ b/Eventures/Views/Event/All.cshtml
@@ -21,8 +21,8 @@
             <tr>
                 <th scope="col">@(i + 1)</th>
                 <th scope="col">@Model[i].Name</th>
-                <th scope="col">@Model[i].Start</th>
-                <th scope="col">@Model[i].End</th>
+                <th scope="col">@Model[i].Start.ToString("dd/MM/yyyy")</th>
+                <th scope="col">@Model[i].End.ToString("dd/MM/yyyy")</th>
                 <th scope="col">@Model[i].Place</th>
             </tr>
            }
